[gd_scene load_steps=8 format=3 uid="uid://d1yyuuyixx2b"]

[ext_resource type="Script" uid="uid://cug6528hwxn7q" path="res://GUI/pause_menu/pause_menu.gd" id="1_uw1f4"]
[ext_resource type="Texture2D" uid="uid://dr5gy4mt64anj" path="res://items/sprites/items.png" id="2_doewe"]
[ext_resource type="Script" uid="uid://dbib2oam48ph" path="res://GUI/pause_menu/scripts/inventory_ui.gd" id="3_2km5g"]
[ext_resource type="Resource" uid="uid://8ai01vk0ey6o" path="res://GUI/pause_menu/inventory/player_inventory.tres" id="4_kfhdc"]
[ext_resource type="PackedScene" uid="uid://b8ugpemory517" path="res://GUI/pause_menu/inventory/inventory_slot.tscn" id="5_dl0fd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4g0oa"]
atlas = ExtResource("2_doewe")
region = Rect2(96, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gerl6"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = SubResource("AtlasTexture_4g0oa")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_uw1f4")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 47.548
anchor_bottom = 27.0
offset_right = 19.0798
offset_bottom = -0.00012207
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.278431)

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 385.0
offset_top = 221.0
offset_right = 458.0
offset_bottom = 244.0
text = "[PAUSED]"

[node name="ItemDescription" type="Label" parent="Control"]
layout_mode = 0
offset_left = 385.0
offset_top = 347.0
offset_right = 617.0
offset_bottom = 367.0
theme_override_font_sizes/font_size = 11
text = "Potion that have a magical power that heal"
autowrap_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
offset_left = 403.0
offset_top = 254.0
offset_right = 599.0
offset_bottom = 342.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_gerl6")

[node name="GridContainer" type="GridContainer" parent="Control/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 5
script = ExtResource("3_2km5g")
data = ExtResource("4_kfhdc")

[node name="InventorySlot" parent="Control/PanelContainer/GridContainer" instance=ExtResource("5_dl0fd")]
layout_mode = 2

[node name="InventorySlot2" parent="Control/PanelContainer/GridContainer" instance=ExtResource("5_dl0fd")]
layout_mode = 2

[node name="InventorySlot3" parent="Control/PanelContainer/GridContainer" instance=ExtResource("5_dl0fd")]
layout_mode = 2
button_mask = 3

[node name="InventorySlot4" parent="Control/PanelContainer/GridContainer" instance=ExtResource("5_dl0fd")]
layout_mode = 2

[node name="InventorySlot5" parent="Control/PanelContainer/GridContainer" instance=ExtResource("5_dl0fd")]
layout_mode = 2

[node name="InventorySlot6" parent="Control/PanelContainer/GridContainer" instance=ExtResource("5_dl0fd")]
layout_mode = 2

[node name="InventorySlot7" parent="Control/PanelContainer/GridContainer" instance=ExtResource("5_dl0fd")]
layout_mode = 2

[node name="InventorySlot8" parent="Control/PanelContainer/GridContainer" instance=ExtResource("5_dl0fd")]
layout_mode = 2

[node name="InventorySlot9" parent="Control/PanelContainer/GridContainer" instance=ExtResource("5_dl0fd")]
layout_mode = 2

[node name="InventorySlot10" parent="Control/PanelContainer/GridContainer" instance=ExtResource("5_dl0fd")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button_Save" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2

[node name="Button_Load" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control"]
max_polyphony = 4
